# Labs_first_term

./: CMakeLists.txt  Calculator.cpp  Calculator.h  Student.cpp  Student.h  StudentAfter1Sem.cpp  StudentAfter1Sem.h  StudentAfter2Sem.cpp  StudentAfter2Sem.h  avg.cpp  avg.h  expression.cpp  expression.h  lab 6.cpp  lab1.8.cpp  lab2.8.cpp  lab3.8.cpp  lab4.8A.cpp  lab4.8A.h  lab4.8B.cpp  lab4.8B.h  lab5.8.cpp  lab6_class.cpp  lab6_class.h  main.cpp  quadratic_equations.cpp  quadratic_equations.h  queue_on_nodes.h  sol.cpp  stack_on_array.h  test4.8.cpp  tests.cpp
